[tool.poetry]
name = "pyapp-flow-steps-build"
version = "0.1.0"
description = "Build steps for PyApp Flow"
authors = ["Tim Savage <tim@savage.company>"]
readme = "README.md"
packages = [{include = "pyapp_flow"}]

[tool.poetry.dependencies]
python = "^3.8"
pyapp-flow = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
